cmake_minimum_required(VERSION 3.5)

# 工程信息
project(StartUseSTL)

# include_directories(${CMAKE_SOURCE_DIR}/..)

add_subdirectory(01_StartUseSTL)
add_subdirectory(02_FunctionTemplate)
add_subdirectory(03_Compilation)
add_subdirectory(04_Sort)
add_subdirectory(05_Materialization)
add_subdirectory(07_ClassTemplate)
add_subdirectory(08_ClassTemplateDerive)
add_subdirectory(09_Separate)
add_subdirectory(10_Separate2)
add_subdirectory(11_Outer)
add_subdirectory(12_StaticMember)
add_subdirectory(13_MyArray)
add_subdirectory(14_Cast)
add_subdirectory(15_Except)
add_subdirectory(16_Despiralization)

